# glvd

./: .gitignore  00-glvd-pvc.yaml  00_db-statefulset.yaml  01-glvd-deployment.yaml  01_glvd-deployment.yaml  02-glvd-service.yaml  02_ingestion-job.yaml  03_pgadmin.yaml  CONTRIBUTING.md  Containerfile  LICENSE  README.md  api-samples.http  deploy-k8s.sh  ingest-postgres.sh  ingestion-cron-job.yaml  kubernetes-deployment.yaml  openapi-v1.yaml  pyproject.toml  run-in-venv.sh  update-image-tags.py  version.txt
.devcontainer/: Containerfile  compose.yaml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yaml  release.yaml  smoke-test.yml
api-tests/: Get CVEs by Gardenlinux Version.bru  actuator.bru  bruno.json  get-root.bru
api-tests/environments/: ci.bru
charts/glvd/: Chart.yaml  values.yaml
deployment/: podman.sh
deployment/compose/: README.md  compose.yaml
deployment/k8s/: 00_db-statefulset-pg18.yaml  00_db-statefulset.yaml  01_glvd-deployment.yaml  02_1_changelogs.yaml  02_ingestion-job.yaml  03_pgadmin.yaml  04_gardener-ingress-dev.yaml  04_gardener-ingress-live.yaml  (+3 more)
docs/: 01_client.md  02_server.md  03_ingestion.md  README.md  kubernetes-deployment.md  user-stories.md
local/: README  clean.sh  start-api.sh  start-ingestion.sh  start-postgres.sh  start.sh  stop.sh
new/: 00_db-statefulset.yaml  01_glvd-deployment.yaml
scripts/: boot-dev-cluster.sh  check-images-exist.sh  gardenlinux-release-notes-md.py  perform-release.sh  release-consistency-check.py  unreleased-changes.py  update-image-tags.py
tests/: conftest.py
(+78 files in other folders)
