[tool.poetry]
name = "glvd"
version = "0.1.0"
description = "Garden Linux Vulnerability Database"
license = "MIT"
authors = []
readme = "README.md"
homepage = "https://gardenlinux.io/"
packages = [
    { include = "glvd", from = "src" },
]

[tool.poetry.scripts]
glvd = 'glvd.cli.client.__main__:main'
glvd-data = 'glvd.cli.data.__main__:main'

[tool.poetry.dependencies]
python = ">=3.11"
asyncpg = ">=0.28"
quart = ">=0.18"
requests = ">=2"
SQLAlchemy = "^2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-asyncio = ">=0.20"
requests-mock = ">=1.9"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = [
    "apt",
    "requests",
    "requests.adapters",
    "urllib3"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
